tests/compile_fail/compare_different_dimensions.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/compare_different_dimensions.rs:11:30
   |
11 |     let _result = distance > time;
   |                              ^^^^ expected `1`, found `0`
   |
   = note: expected struct `Quantity<Scale, Dimension<_M, _L<1>, _T<0>, _I, _Θ, _N, _J, _A>>`
              found struct `Quantity<Scale, Dimension<_M, _L<0>, _T<1>, _I, _Θ, _N, _J, _A>>`
